--- a/src/components/layout/Header/header.module.css
+++ b/src/components/layout/Header/header.module.css
@@ -2,10 +2,14 @@
   display: flex;
   align-items: center;
   padding: 30px 100px;
-  background-color: black;
+  width: 100%;
+  height: 68px;
+  position: fixed;
   color: white;
   font-weight: 700;
   font-size: 1.5rem;
+  z-index: 1;
+  border-bottom: 1px solid white;
 }
 .header__input_search {
   position: relative;
@@ -31,9 +35,4 @@
   position: absolute;
   top: 6px;
     left: 38px;
-}
-.line{
-    width: 10px;
-    height: 1px;
-    background-color: white;
 }
