--- a/src/components/layout/Header/header.module.css
+++ b/src/components/layout/Header/header.module.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 30px 100px;
   width: 100%;
   height: 68px;
@@ -27,6 +28,9 @@
   text-decoration: none;
   margin: 0 32px;
 }
+.hideroute{
+  color: rgba(217, 217, 217, 0.0);
+}
 .icon {
   font-size: 1.6rem;
   margin: 0 12px 0 0;
@@ -34,5 +38,10 @@
 .input .icon {
   position: absolute;
   top: 6px;
-    left: 38px;
+  left: 38px;
+}
+.listicon {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
