--- a/src/components/layout/Header/header.module.css
+++ b/src/components/layout/Header/header.module.css
@@ -2,46 +2,35 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px 100px;
-  width: 100%;
-  height: 68px;
-  position: fixed;
-  color: white;
-  font-weight: 700;
-  font-size: 1.5rem;
-  z-index: 1;
-  border-bottom: 1px solid white;
+  margin-bottom: 40px;
 }
-.header__input_search {
-  position: relative;
-  background-color: var(--background-gray);
-  border: none;
-  margin: 0 32px;
-  width: 177px;
-  height: 27px;
-  border-radius: 20px;
-  padding-left: 26px;
-  color: white;
-}
-.router {
-  color: white;
-  text-decoration: none;
-  margin: 0 32px;
-}
-.hideroute{
-  color: rgba(217, 217, 217, 0.0);
-}
-.icon {
-  font-size: 1.6rem;
-  margin: 0 12px 0 0;
-}
-.input .icon {
-  position: absolute;
-  top: 6px;
-  left: 38px;
-}
-.listicon {
+.header__logo {
   display: flex;
   align-items: center;
+}
+.nameLogo {
+  margin-left: 12px;
+}
+.header__router {
+  display: flex;
+  align-items: center;
+  width: 50%;
   justify-content: space-between;
+}
+.router {
+  color: var(--text-main);
+  cursor: pointer;
+}
+.selectRoute {
+  color: var(--color-main);
+  cursor: pointer;
+}
+.header__button {
+  width: 174px;
+  height: 48px;
+  border-radius: 20px;
+  background-color: white;
+  color: var(--color-main);
+  border: none;
+  font-size: 18px;
 }
