--- a/src/app/tour_detail/tour_detail.module.css
+++ b/src/app/tour_detail/tour_detail.module.css
@@ -1,107 +1,79 @@
-.Header_tour_detail{
-            text-align: center;
-            color: var(--color-main);
-            
-
+.Header_tour_detail {
+  text-align: center;
+  color: var(--color-main);
 }
-.container__header__nameTourDetail{
-    display: flex;
-    align-items: center
+.TourDetail__Name {
+  width: 100%;
+  font-weight: 700;
+  font-size: 64px;
+  text-align: center;
+  letter-spacing: -0.231818px;
+  color: var(--color-main);
 }
-.container__header__nameTourDetail__Name{
-    width: 100% ;
-    font-weight: 700;
-    font-size: 64px;
-    text-align: center  ;
-    line-height: 77px;
-    letter-spacing: -0.231818px;
-    color: #F97300;
-   
+.TourDetail__img {
+  /* object-fit: cover;  */
+  width: 100%;
+  height: 361px;
+  margin-top: 3%;
+  border-radius: 10px;
 }
-.container__header__nameTourDetail__img{
-    width: 100%;
-    height: 361px;
-    margin-top: 3%;
+.TourDetail__content {
+  line-height: 19px;
+  letter-spacing: -0.231818px;
+  color: #858585;
+  margin-top: 1%;
+  font-size: 16px;
 }
-.container__header__nameTourDetail__img img{
-    width: 100%;
-    height: 361px;
+.TourDetail__Evaluate {
+  display: flex;
+  align-items: center;
+  margin-top: 1%;
 }
-.container__header__nameTourDetail__content{
-    line-height: 19px;
-    letter-spacing: -0.231818px;
-    color: #858585;
-    margin-top: 1%;
+.TourDetail__Evaluate__icon__icon {
+  color: var(--color-main);
 }
-.container__header__nameTourDetail__Evaluate{
-    display: flex;
-    align-items: center;
-    margin-top: 1%;
+.TourDetail {
+  margin-top: 1%;
 }
-.container__header__nameTourDetail__Evaluate__icon{
-    margin-left: 3%;
+.title__left {
+  margin-right: 20px;
 }
-.container__header__nameTourDetail__Evaluate__icon__icon{
-    color:#F97300;
+.content__right {
+  font-size: 18px;
+  font-weight: 500;
 }
-.container__header__nameTourDetail__Schedule {
-    display: flex;
-    align-items: center;
-    margin-top: 1%;
+.grid__schedule__day {
+  background-color: white;
+  color: var(--text-main);
+  border-radius: 10px;
+  width: 144px;
+  height: 43px;
+  text-align: center;
+  line-height: 43px;
+  font-size: 18px;
 }
-.container__header__nameTourDetail__Schedule__p{
-    margin-left: 1%;
+.grid__schedule__detail {
+  font-size: 18px;
+  font-weight: 500;
 }
-.container__header__nameTourDetail__people{
-    display: flex;
-    align-items: center;
-    margin-top: 1%;
+.TourDetail__booking {
+  margin-top: 1%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.container__header__nameTourDetail__people__quantity{
-    margin-left: 1%;
+.tourDetail__price {
+  font-size: 40px;
+  font-weight: 700;
+  color: var(--color-main);
 }
-.container__header__nameTourDetail__detail{
-    margin-top: 1%;
-    width: 100%;
-}
-.container__header__nameTourDetail__detail__day{
-    display: flex;
-    
-}
-.container__header__nameTourDetail__detail__day__text{
-    margin-bottom: 1%;
-    text-align: center;
-    background-color: white;  
-    width: 144px !important;
-    height: 43px;
-    color: black;  
-    border-radius: 10px;
-    border: 1px solid #0000;
-    padding: 3px;
-    margin-right: 1.5%;
-}
-.container__header__nameTourDetail__detail__day__text__contain{
-    font-weight: 400
-}
-.container__header__nameTourDetail__detail_price{
-    margin-top: 3%;
-    display: flex;
-    align-items: center;
-}
-.container__header__nameTourDetail__detail_price_money{
-    margin-left: 3%;
-    display: flex;
-    align-items: center;
-    margin-top: 5px;
-}
-.container__header__nameTourDetail__detail_price_button{
-    background: #10828C;
-    border-radius: 10px;
-    width: 256px;
-    height: 70px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    color: #FFFFFF;
+.TourDetail__button {
+  background: var(--btn-main);
+  border-radius: 10px;
+  width: 256px;
+  height: 70px;
+  font-weight: 700;
+  font-size: 24px;
+  color: white;
+  border: none;
 }
