--- a/src/components/common/card-tour/card_tour.module.css
+++ b/src/components/common/card-tour/card_tour.module.css
@@ -5,7 +5,9 @@
     width: 100%;
     height: 194px;
 }
-
+.container:hover{
+    cursor: pointer;
+}
 .body {
     padding: 16px 20px;
     display: flex;
