--- a/src/components/layout/Header/header.module.css
+++ b/src/components/layout/Header/header.module.css
@@ -34,3 +34,36 @@
   border: none;
   font-size: 18px;
 }
+.header__button:hover {
+  background-color: #ebc396;
+  color: white;
+}
+.header__userName {
+  background-color: white;
+  padding: 0 24px;
+  border-radius: 10px;
+  border: 1px solid var(--color-main);
+  color: var(--color-main);
+}
+.header__userName:hover {
+  cursor: pointer;
+}
+.header__userName__menu {
+  position: absolute;
+  width: 200px;
+  background-color: white;
+  color: var(--text-main);
+  border-radius: 0px 0px 10px 10px;
+  top: 39px;
+  right: 0;
+  z-index: 10;
+}
+.header__userName__menu__block {
+  display: none;
+}
+.header__userName__menu__block li {
+  width: 100%;
+}
+.menu__item:hover {
+  color: var(--color-main);
+}
