--- a/src/app/payment/payment.module.css
+++ b/src/app/payment/payment.module.css
@@ -1,104 +1,56 @@
-.Header_tour_detail{
-    text-align: center;
-    color: var(--color-main);
-    
-
+.container__header__namePayment {
+  display: flex;
+  align-items: center;
 }
-.container__header__namePayment{
-    display: flex;
-    align-items: center
+.container__header__namePayment__Name {
+  width: 100%;
+  font-weight: 700;
+  font-size: 64px;
+  text-align: center;
+  line-height: 77px;
+  letter-spacing: -0.231818px;
+  color: #f97300;
 }
-.container__header__namePayment__Name{
-    width: 100% ;
-    font-weight: 700;
-    font-size: 64px;
-    text-align: center  ;
-    line-height: 77px;
-    letter-spacing: -0.231818px;
-    color: #F97300;
-
+.payment__form {
+  width: 80%;
+  height: 520px;
+  background-color: white;
+  border-radius: 20px;
+  margin: 40px auto;
+  padding: 80px 124px;
 }
-.container__header__namePayment__content{
-    width: 1061px;
-    height: 553px;
-    background: #FFFFFF;
-    border-radius: 20px;
-    margin: auto;
-    margin-top: 2%;
+.payment__form__sub {
+  font-weight: 700;
+  font-size: 24px;
+  color: var(--text-main);
 }
-.container__header__namePayment__content__name__view{
-    width: 223px;
-    height: 40px;
-    background: #FFFFFF;
-    border: 1px solid #858585;
-    border-radius: 5px;
-    margin-left: 2%;
-    
+.payment__form__input {
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid #858585;
+  height: 40px;
+  padding-left: 12px;
+  color: #858585;
 }
-.container__header__namePayment__content{
-    padding-top: 5%;
-    padding-left: 5%;
-    padding-right: 5%;
+.payment__booking {
+  width: 80%;
+  margin: 1% auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.container__header__namePayment__content_item{
-    display: flex;
-    margin-top: 3%;
+.payment__price {
+  font-size: 40px;
+  font-weight: 700;
+  color: var(--color-main);
 }
-.container__header__namePayment__content__name__firstname{
-    display: flex;
-    align-items: center;
-    width: 50%;
-}
-.container__header__namePayment__content__name__lastname{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 50%;
-}
-.container__header__namePayment__content__p{
-    width: 30%;
-}
-.container__header__namePayment__content__view{
-    width: 70%;
-    height: 40px;
-    background: #FFFFFF;
-    border: 1px solid #858585;
-    border-radius: 5px;
-    margin-left: 2%;
-}
-.container__header__namePayment__detail_price{
-    margin: 3% 7% 0% 7%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 5% !important;
-}
-.container__header__namePayment__detail_price__nomal{
-    display: flex;
-    width: 45%;
-    justify-content: space-between;
-    align-items: center;
-}
-.container__header__namePayment__detail_price_money{
-    margin-left: 3%;
-    
-}
-.container__header__namePayment__detail_price__nomal_p{
-    font-weight: 700;
-    font-size: 40px;
-    color: #F97300;
-   width: 60%;
-}
-
-
-.container__header__namePayment__detail_price_button{
-    background: #10828C;
-    border-radius: 10px;
-    width: 256px;
-    height: 70px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    color: #FFFFFF;
+.payment__button {
+  background: var(--btn-main);
+  border-radius: 10px;
+  width: 256px;
+  height: 70px;
+  font-weight: 700;
+  font-size: 24px;
+  color: white;
+  border: none;
 }
