--- a/src/app/admin/create-tour/create_tour.module.css
+++ b/src/app/admin/create-tour/create_tour.module.css
@@ -70,15 +70,29 @@
     width: 78px;
 }
 
+.img_block {
+    width: 880px;
+}
+
+.img_text {
+    width: 100%;
+    margin-left: 40px;
+    margin-bottom: 20px;
+}
+
 .img_choose {
     margin-left: 40px;
-    width: 880px;
+    width: 100%;
     height: 222px;
     color: var(--text-gray);
     background-color: var(--background-gray);
     display: inline-flex;
     align-items: center;
     justify-content: space-around;
+}
+
+.img_choose img {
+    height: 100%;
 }
 
 .position_img {
@@ -97,8 +111,9 @@
     justify-content: space-around;
     cursor: pointer;
 }
-.messErr{
-  font-size: 16px;
-  font-weight: 500;
-  color: red;
+
+.messErr {
+    font-size: 16px;
+    font-weight: 500;
+    color: red;
 }
