--- a/src/app/admin/create-tour/create_tour.module.css
+++ b/src/app/admin/create-tour/create_tour.module.css
@@ -27,6 +27,8 @@
     width: 100%;
     border: none;
     border-bottom: solid 1px black;
+    color: var(--text-gray);
+    font-weight: 500;
 }
 
 .frame_table table {
