--- a/src/components/layout/Footer/footer.module.css
+++ b/src/components/layout/Footer/footer.module.css
@@ -1,6 +1,6 @@
 .container__footer {
   position: absolute;
-  width: 100vw;
+  width: 100vw !important;
   left: -100px;
   background-color: white;
   margin-top: 100px;
@@ -18,8 +18,8 @@
   width: 60%;
   margin-top: 10px;
 }
-.icon{
-    width: 24px;
-    height: 24px;
-    margin-right: 10px;
+.icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
 }
